[ADD] .gitgnore檔案 [FIX] 修正寫死的變數 [MOD] package.json->index.js修改為index.ts

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "eightqueens",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "build": "tsc",
     "dev": "nodemon index.ts"
-},
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
